# age

./: .age.toml  .editorconfig  .gitignore  CHANGELOG.md  README.md  Taskfile.yaml  age.nimble  aqua.yaml  lefthook.yaml  pyproject.toml  registry.yaml  renovate.json5
.github/: release-body.md
.github/envs/check-for-aqua/: aqua.yaml
.github/workflows/: check-for-aqua.yaml  deploy-docs.yml  main-nimlang.yml  main.yml  release.yml
_nim/: age.nimble
_nim/src/: age.nim
_nim/src/age/: cli.nim  config.nim  consts.nim  engine.nim  info.nim  versioning.nim
_nim/tests/: test_config.nim  test_engine.nim  test_stub.nim  test_versioning.nim
aqua/: aqua-policy.yaml  aqua.yaml  registry.yaml
docs/: conf.py  index.rst
docs/usage/: configuration.rst  index.rst  installation.rst  templating.rst
e2e/: conftest.py
src/: age.nim
src/age/: cli.nim  config.nim  consts.nim  engine.nim  init.nim  templating.nim  versioning.nim
tests/: .gitignore  test_config.nim  test_engine.nim  test_templating.nim  test_versioning.nim
