[project]
name = "age-cli"
version = "0.10.0"
description = "This is virtual project for testing and documentation."
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "sphinx~=7.2.6",
    "myst-parser~=4.0.1",
    "piccolo-theme~=0.24.0",
    "sphinxcontrib-asciinema>=0.4.2",
    "sphinx-design>=0.6.1",
    "sphinxnotes-strike>=1.2.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "esbonio~=0.16.4",
    "pytest~=8.3.5",
    "ruff>=0.11.7",
    "sphinx-autobuild~=2024.10.3",
]

[tool.doc8]
max-line-length = 119

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest]
testpaths = ["e2e"]
